# vim-man

./: pyproject.toml  run.py
.github/workflows/: ci.yml
src/vim_man/: __init__.py  constants.py  vector.py
tests/: test_vector.py
