[project]
name = "vim-man"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danny Bozbay", email = "107803920+dbozbay@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
vim-man = "vim_man:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.51.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.pyrefly]




